--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
 	<body>
 		<!--This is a comment-->
 		This is a a test page
+		<br>
+		I have added this line as edit for version 2
 	</body>
 
 </html>
